Intenta solucionar el socket

--- a/Parcial/src/Register.html
+++ b/Parcial/src/Register.html
@@ -12,7 +12,7 @@
     <div id="registro">
         <h2>Registro de Jugadores</h2>
         <form id="registroForm">
-            <input type="text" id="username" placeholder="Ingresa tu nombre" required>
+            <input type="text" id="username" placeholder="Ingresa tu nombre" required autocomplete="username">
             <button type="submit">Unirme al juego</button>
         </form>
     </div>
