sube para asegurar

--- a/Parcial/src/Register.html
+++ b/Parcial/src/Register.html
@@ -33,7 +33,7 @@
         <button id="reiniciarJuego">Reiniciar el juego</button>
     </div>
 
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <script src="./client.js"></script>
 </body>
 </html>
